# esp32-console-cpp-improved

./: .cproject  .project  CMakeLists.txt  Desript.ion  README.md  partitions_example.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  update-sdk-sdmmc.diff  update-sdk.diff
components/cmd_nvs/: cmd_nvs.c
components/cmd_sdcard/: CMakeLists.txt  Kconfig.projbuild  cmd_sdcard.cpp  cmd_sdcard.hpp  sdcard_ctrl  sdcard_ctrl.cpp  sdcard_ctrl.hpp  sdcard_io  sdcard_io.cpp
components/cmd_system/: CMakeLists.txt  cmd_system.c  cmd_system.cpp  cmd_system.h  console_example.h
components/extra_stream/: CMakeLists.txt  extra_stream.cpp  extrstream.cpp
components/extra_stream/include/: extra_stream  extrstream
components/extrstream/: CMakeLists.txt  extrstream.cpp
components/extrstream/include/: extrstream  tuplecall  tuplecaller
components/utils/: CMakeLists.txt  astring.h
main/: CMakeLists.txt  Kconfig.projbuild  cmd_decl.h  console.h  console_example.h  console_example_main.c  console_example_main.cpp  console_prj.cfg.h
